# qrcode-gen

./: AGENTS.md  Cargo.toml  README.md
.android/: test.keystore
.cargo/: config.toml
.github/workflows/: android.yaml  build.yaml  linux-glibc.yaml  macos.yaml  windows-10.yaml  windows-11.yaml
android/: key.properties  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/io/github/mokurin000/qrcode_gen/: MainActivity.java
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
locales/ar-SA/: main.ftl
locales/bn-BD/: main.ftl
locales/cs-CZ/: main.ftl
locales/da-DK/: main.ftl
locales/de-DE/: main.ftl
locales/el-GR/: main.ftl
locales/en-US/: main.ftl
locales/es-ES/: main.ftl
locales/fi-FI/: main.ftl
locales/fr-FR/: main.ftl
locales/he-IL/: main.ftl
locales/hi-IN/: main.ftl
locales/hu-HU/: main.ftl
locales/id-ID/: main.ftl
locales/it-IT/: main.ftl
locales/ja-JP/: main.ftl
locales/ko-KR/: main.ftl
locales/ms-MY/: main.ftl
locales/nb-NO/: main.ftl
locales/nl-NL/: main.ftl
locales/pl-PL/: main.ftl
locales/pt-BR/: main.ftl
locales/pt-PT/: main.ftl
locales/ro-RO/: main.ftl
locales/ru-RU/: main.ftl
locales/sv-SE/: main.ftl
locales/th-TH/: main.ftl
locales/tr-TR/: main.ftl
locales/ur-PK/: main.ftl
locales/vi-VN/: main.ftl
locales/zh-CN/: main.ftl
locales/zh-TW/: main.ftl
src/: android.rs  i18n.rs  lib.rs  main.rs  model.rs  startup.rs  timer.rs  windows.rs
src/i18n/: tests.rs
src/model/: export.rs  qr.rs
