[package]
name = "qrcode-gen"
version = "0.1.0"
edition = "2024"

[dependencies]
compio = "0.19.0"

# Error handling, logging
color-eyre = "0.6.5"
spdlog-rs = { version = "0.5.3", default-features = false, features = [
    "level-debug",
    "release-level-info",
    "source-location",
] }

# GUI
winio = { version = "0.12.0-rc.5", features = [
    "win32-dark-mode",
    "compio-compat",
], default-features = false }

# i18n
fluent-bundle = "0.16"
sys-locale = "0.3"
icu_locale_core = "2.2.0"
language-matcher = "0.2"

# QRCode
[dependencies.image]
version = "0.25.10"
default-features = false
features = ["png"]

[dependencies.qrcode]
version = "0.14"
default-features = false
features = ["image", "svg"]

[target.'cfg(target_os = "android")'.dependencies]
# keep sync with winio
android-activity = "0.6"

[lib]
name = "main"

[features]
default = ["winui"]
timing = []

gtk = ["winio/gtk"]
qt = ["winio/qt"]

win32 = ["winio/win32"]
winui = ["winio/winui"]

[profile.release]
# reduce binary size & optimize performance
lto = true
codegen-units = 1
# reduce binary size at the cost of abort
panic = "abort"
# optimize for smaller size
opt-level = 3

strip = "symbols"
# full debuginfo too bloated to package
debug = "limited"
# .dSYM symlink on macOS, .dwp on Linux, .pdb on Windows
split-debuginfo = "packed"

[profile.dev]
debug = "limited"
